ACLOCAL_AMFLAGS = -I m4 

EXTRA_DIST = README.md LICENSE

SUBDIRS = base \
	tools/fbitdump \
	tools/fbitconvert \
	tools/fbitmerge \
	tools/fbitexpire \
	plugins/input/ipfix_generator \
	plugins/intermediate/httpfieldmerge \
	plugins/intermediate/odip \
	plugins/intermediate/proxy \
	plugins/intermediate/timestampfieldmerge \
	plugins/storage/fastbit
